src/objects/TR1__TalentRoverProperties__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>System Properties of Talent Rover</description>
    <fields>
        <fullName>Apex_Email_Service__c</fullName>
        <label>Apex Email Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Base_URL__c</fullName>
        <label>Community Base URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Assign_to_Default_Account_While_Parsing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Default Account While Parsing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__AutoPopulateSendOutFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoPopulateSendOutFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Auto_run_zero_byte_Flash_code__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto run zero byte Flash code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Mktg_Call_List_Email_Field__c</fullName>
        <description>Contact&apos;s Email Field API Name to Send Mass Email from Candidate Marketing Call List</description>
        <label>Candidate Mktg Call List Email Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Status_When_Assignment_Ended__c</fullName>
        <description>Specify Picklist value when to Set Candidate Status when Assignment Ended on Closing Report</description>
        <label>Candidate Status When Assignment Ended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Chatter_Auto_Follow_Job_Field__c</fullName>
        <label>Chatter Auto Follow Job Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Host__c</fullName>
        <label>Daxtra Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Account__c</fullName>
        <label>Default Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Interview_Duration__c</fullName>
        <label>Default Interview Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Delete_JobBoard_Applications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete JobBoard Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Disable_Calendar_Invites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Calendar Invites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Disable_Zipcode_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Zipcode Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Do_Not_Append_Account_to_Job_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Append Account to Job Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Do_Not_Attach_Resume_In_Call_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Custom Setting is ticked, no resume will be attached automatically when sending an email to recipients of a Candidate Marketed Call List.</description>
        <label>Do Not Attach Resume In Call List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Do_not_Update_Contact_Account_in_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Update Contact Account in CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Do_not_Update_Contact_From_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Update Contact via Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Document_Viewer_Host__c</fullName>
        <label>Document Viewer Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Consent_Check_Enforcement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Consent Check Enforcement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Create_New_Resume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Create New Resume From Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Document_Editor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Document Editor (Beta)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_New_ATS_Data_model__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for switching between old data model and new data model for ATS.</description>
        <label>Enable New ATS Data Model?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Send_to_Additional_Internal_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Send to Additional Internal Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Fill_Logged_In_User_on_Send_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fill Logged In User on Send Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Generate_Flash_File_With_Parsing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please uncheck this option if you do not want to generate flash file along with parsing</description>
        <inlineHelpText>Please uncheck this option if you do not want to generate flash file along with parsing</inlineHelpText>
        <label>Generate Flash File With Parsing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__IncludeJobRelatedList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Related List in New Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__JobManager_LastActivity_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JobManager LastActivity Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Manager_Submittal_Email_Field__c</fullName>
        <label>Job Manager Submittal Email Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Manager_Submittal_Email_Template__c</fullName>
        <description>Default Job Manager Submittal Email Template (API Name)</description>
        <inlineHelpText>Default Job Manager Submittal Email Template (API Name)</inlineHelpText>
        <label>Job Manager Submittal Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Mass_Placement_Batch_Size__c</fullName>
        <defaultValue>30</defaultValue>
        <description>The number of Closing Reports created at a time on the Mass Placement module</description>
        <inlineHelpText>The number of Closing Reports created at a time on the Mass Placement module</inlineHelpText>
        <label>Mass Placement Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Organization_ID__c</fullName>
        <description>Please Specify Org Id here</description>
        <inlineHelpText>Please Specify Org Id here</inlineHelpText>
        <label>Organization ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Redirect_To_ClosingReport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redirect To ClosingReport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Redirect_To_Resume_Editor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redirect To Resume Editor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Resume_Search_Filters_Class__c</fullName>
        <label>Resume Search Filters Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SM_Relatedlist_Layout__c</fullName>
        <label>S&amp;M Related list Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Salesforce_Host__c</fullName>
        <label>Salesforce Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Save_Education_While_Parsing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Education While Parsing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Save_Employment_While_Parsing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Employment While Parsing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Save_Skills_While_Parsing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Skills While Parsing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Result_Default_Page_Size__c</fullName>
        <description>Search Result Default Page Size</description>
        <label>Search Result Default Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Results_Additional_Contact_Fields__c</fullName>
        <description>Contact Fields to appear in Search Results Page</description>
        <label>Search Results Additional Contact Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SendOut_Invite_Candidate_Email_Template__c</fullName>
        <label>Send Out Invite Candidate Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SendOut_Invite_Interviewer_EmailTemplate__c</fullName>
        <label>SendOut Invite Interviewer EmailTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ShowTabs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Tabs on Search Results Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Standard_Call_List_Email_Field__c</fullName>
        <description>Contact&apos;s Email Field API Name to Send Mass Email from Standard Call List</description>
        <label>Standard Call List Email Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TalentRover_Nova_API_Host__c</fullName>
        <label>TalentRover Nova API Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Talent_Rover_API__c</fullName>
        <label>Talent Rover API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Talent_Rover_Host__c</fullName>
        <label>Talent Rover Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TimesheetType__c</fullName>
        <label>Timesheet Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__UpdateExistingEducationHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Existing Education History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__UpdateExistingWorkHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Existing Work History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Use_Custom_Templates_in_CallList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Templates in CallList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Use_JobBoardApplication__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use JobBoardApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Use_Override_Amt_Fields_for_GP_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Override Amt Fields for GP/Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Use_Presigned_urls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Presigned urls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Use_Rate_Card_Module__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Rate Card Module?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Use_Signature_In_CallList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Signature In CallList</label>
        <type>Checkbox</type>
    </fields>
    <label>TalentRover Properties</label>
</CustomObject>